--- a/.github/workflows/ci-id.yml
+++ b/.github/workflows/ci-id.yml
@@ -29,10 +29,14 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Install Ansible
+      - name: Install Ansible and Docker
         run: |
           sudo apt update
-          sudo apt install -y ansible docker.io
+          sudo apt install -y ansible
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sudo sh get-docker.sh
+          sudo systemctl start docker
+          sudo systemctl enable docker
 
       - name: Run Ansible playbook to build Docker image and deploy
         run: ansible-playbook ansible/deploy.yml -i ansible/inventory.yml
