Update ci-id.yml pour modfier le nom de deploy

--- a/.github/workflows/ci-id.yml
+++ b/.github/workflows/ci-id.yml
@@ -39,4 +39,4 @@ jobs:
           sudo systemctl enable docker
 
       - name: Run Ansible playbook to build Docker image and deploy
-        run: ansible-playbook ansible/deploy.yml -i ansible/inventory.yml
+        run: ansible-playbook ansible/playbook.yml -i ansible/inventory.yml
