--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -5,11 +5,10 @@
   vars:
     project_dir: /tmp/my-kotlin-app
     repo_url: "https://github.com/hassnae2003/App_AbsenceManager.git"
+    container_name: kotlin_apache_container
+    docker_image: kotlin-apache-server:latest
     apk_output_path: app/build/outputs/apk/debug/app-debug.apk
-
     apache_build_dir: /tmp/apache-server
-    apache_image_name: apk-apache-server:latest
-    apache_container_name: apk-apache-container
 
   tasks:
 
@@ -38,33 +37,32 @@
       copy:
         src: "{{ project_dir }}/{{ apk_output_path }}"
         dest: "{{ apache_build_dir }}/app-debug.apk"
-        remote_src: yes
 
     - name: Copier le Dockerfile Apache dans le dossier apache-server
       copy:
         src: ansible/Dockerfile.apache
         dest: "{{ apache_build_dir }}/Dockerfile"
-        remote_src: yes
 
-    - name: Construire l'image Docker Apache avec l'APK
+    - name: Construire l'image Docker Apache avec APK
       docker_image:
-        name: "{{ apache_image_name }}"
+        name: "{{ docker_image }}"
         build:
           path: "{{ apache_build_dir }}"
+        state: present
       become: true
 
-    - name: Supprimer l'ancien conteneur Apache s’il existe
+    - name: Supprimer l'ancien conteneur s’il existe
       docker_container:
-        name: "{{ apache_container_name }}"
+        name: "{{ container_name }}"
         state: absent
       become: true
 
-    - name: Lancer le conteneur Apache avec l'APK exposé sur le port 8080
+    - name: Lancer le conteneur Docker Apache avec l'APK
       docker_container:
-        name: "{{ apache_container_name }}"
-        image: "{{ apache_image_name }}"
+        name: "{{ container_name }}"
+        image: "{{ docker_image }}"
         state: started
         restart_policy: always
-        ports:
+        published_ports:
           - "8080:80"
       become: true
