--- a/.github/workflows/ci-id.yml
+++ b/.github/workflows/ci-id.yml
@@ -1,12 +1,10 @@
-name: Android CI
+name: Android CI with Ansible and Artifact
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
@@ -19,14 +17,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: temurin
+          distribution: 'temurin'
           java-version: 17
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
-
-      - name: Build with Gradle
-        run: ./gradlew assembleDebug
 
       - name: Install Ansible and Docker
         run: |
@@ -37,11 +29,13 @@ jobs:
           sudo systemctl start docker
           sudo systemctl enable docker
 
-      - name: Run Ansible playbook to build Docker image and deploy Apache with APK
-        run: ansible-playbook ansible/playbook.yml -i ansible/inventory.yml
+      - name: Run Ansible playbook
+        run: |
+          mkdir -p /tmp/generated-apk
+          ansible-playbook ansible/playbook.yml -i ansible/inventory.yml
 
-      - name: Upload APK artifact
+      - name: Upload APK as GitHub Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: apk-debug
-          path: /tmp/my-kotlin-app/app/build/outputs/apk/debug/app-debug.apk
+          name: AbsenceManager-APK
+          path: /tmp/generated-apk/app-debug.apk
