--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App_AbsenceManager"
         tools:targetApi="31">
+
+        <!-- Activité principale (accueil) -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- ✅ Nouvelle activité Archive -->
+        <activity android:name=".ArchiveActivity" />
+
     </application>
 
 </manifest>
